--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Custom Generator</title>
+    <title>Custom Generator - VS</title>
 
     <script src="js/simple.js"></script>
     <link rel="stylesheet" href="styles/main.css" />
