--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <!-- TEMPLATE: header.template.html -->
 
     <div class="content">
-      <div>SITE CONTENT</div>
+      <div>SITE CONTENT - VS</div>
       <img src="assets/images/build-tools.jpg" />
     </div>
 
