--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <div class="content">
-      <div>SITE CONTENT</div>
+      <div>SITE CONTENT - VS</div>
       <img src="assets/images/build-tools.jpg" />
     </div>
 
