--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Custom Generator - VS</title>
+    <title>Custom Generator - VS Code</title>
 
     <script src="js/simple.js"></script>
     <link rel="stylesheet" href="styles/main.css" />
@@ -11,7 +11,7 @@
     <!-- TEMPLATE: header.template.html -->
 
     <div class="content">
-      <div>SITE CONTENT - VS</div>
+      <div>SITE CONTENT - Updated by VS Code</div>
       <img src="assets/images/build-tools.jpg" />
     </div>
 
