--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <!-- TEMPLATE: header.template.html -->
 
     <div class="content">
-      <div>SITE CONTENT - DevOps by GitHub Actions towards GitHub Pages</div>
+      <div>DevOps by GitHub Actions towards GitHub Pages - Updated: 19-08-2023</div>
       <img src="assets/images/build-tools.jpg" />
     </div>
 
