--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <div class="content">
-      <div>SITE CONTENT - DevOps by GitHub Actions towards GitHub Pages</div>
+      <div>DevOps by GitHub Actions towards GitHub Pages - Updated: 19-08-2023</div>
       <img src="assets/images/build-tools.jpg" />
     </div>
 
